--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,10 @@
         "fix-style": "phpcbf -p --standard=PSR2 src/ -v"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
+    }
 }
