--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "php": ">=7.0",
         "ext-json": "*",
         "ext-openssl": "*",
+        "ext-mbstring": "*",
+        "hughcube/purl": "*",
         "hughcube/guzzle-http": "*"
     },
     "require-dev": {
